fix overflow

--- a/src/components/contributers/_photographers.scss
+++ b/src/components/contributers/_photographers.scss
@@ -41,6 +41,7 @@
       @include flexCenter;
       position: relative;
       height: 350px;
+      overflow-x: hidden;
 
       section {
         margin: 0 1rem;
